20091014 mnemogogo-0.9.5
* MAJOR CHANGE: new export/import format
* Handle a missing Python Image Library more gracefully
* Tidy up image handling functions.
* Fix a timezone bug in the calculation of days left.
* Fix a bug in resizing images below a maximum size.
* Lazier loading of card text.
* Switch to license to GPL2.

20090905 mnemogogo-0.9.4
* Randomize the choice of new cards.
* No longer crashes when a file cannot be removed.
* Open files with US-ASCII instead of ASCII

20090604 mnemogogo-0.9.3
* Fix an export problem on Windows that caused a
  java.lang.NumberFormatException in MnemoGoGo
* Fix an export problem on Windows that put backslashes
  rather than slashes in html img paths.
(Thanks to Johannes Charman for reporting and testing these bugs on Windows)

20090526 mnemogogo-0.9.2
* Fix a bug in the transition from scheduled cards to new/forgotten cards.
* Use the types module in locking_enabling.py instead of the deprecated
  new module. This should fix a problem running the plugin on windows.

20090521 mnemogogo-0.9.1
* Ensure that forgotten cards are shifted onto new queue.
* Calculate future card tallies.

20090519 mnemogogo-0.9.0
* Fix the scheduling of 0/1 cards.
* Add card functions for displaying statistics.
* Fix a bug in the calculation of last_day.
* Add a progress bar for exports.

20090514 mnemogogo-0.6.5
* Java library now only asks for READ permission in FindCardDir.
* Fix a major start_time corruption bug when importing.
* Encode image filenames (with punycode) to avoid problems.
* Bundle the html and png files into single file that is unpacked
  into the MIDlet's resource directory. This should make exports
  a bit faster (less files), but more importantly it should
  reduce the number of security confirmation prompts.

20090513 mnemogogo-0.6.4
* Resize images in a temporary directory.
* Fix a major bug in the mapping of card ids to html filenames.
* Adjust image scaling to better fill screen in MnemoJoJo export.
